<resources>
    <string name="app_name">EngageCommerce</string>
    <string name="price_format">$%d.00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preload_button">preload button</string>
    <string name="navigation_button">navigation_button</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="additional">Additional</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="john_doe">John Doe</string>
    <string name="user_email">John@example.com</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_detail_text">Sign in with your email and password or continue with Google</string>
    <string name="login_button">Continue</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="create_account_header">Create Account</string>
    <string name="register_bio">Provide your details or continue with Google</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="sign_in_text">Already have an account?</string>
    <string name="sign_in_action_text">Sign In</string>
    <string name="home">Home</string>
    <string name="menu_button">menu button</string>
    <string name="cart_button">cart_button</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="checkout_button">Checkout</string>
    <string name="quantity_text">Quantity</string>
    <string name="cart_value" />
    <string name="cart_total">Total</string>
    <string name="add_to_cart_deprecated" />
    <string name="button_add_to_cart_text">Add to Cart</string>
    <string name="button_in_cart_text">In Cart</string>
    <string name="product_hero_image">productHeroImage</string>
    <string name="price_desc">Price:</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="default_cart_total_value">£0.00</string>
    <string name="default_cart_quantity_value">0</string>
    <string name="button_sign_out_text">Sign Out</string>
    <string name="first_name_text">First Name:</string>
    <string name="last_name_text">Last Name:</string>
    <string name="email_text">Email:</string>
    <string name="price_placeholder_text">$200</string>
    <string name="content_desc_cart_delete" />
    <string name="product_name_placeholder_text">Product Name</string>
    <string name="content_desc_product">Image of the productEntity</string>
    <string name="free_delivery_text">FREE Delivery</string>
    <string name="default_cart_size_text">0</string>
    <string name="order_button_text">Confirm and Order</string>
    <string name="amount_to_pay_text">To pay:</string>
    <string name="text_delivery_date">Arrives on</string>
    <string name="header_first_name_placeholder">Rick</string>
    <string name="last_name_placeholder">Doe</string>>
    <string name="email_placeholder">Rick@example.com</string>
    <string name="brand_text">by</string>

</resources>