<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:enabled="true"
        android:title="@string/home" />

    <group android:id="@+id/loggedInGroup">

        <item
            android:id="@+id/menuCart"
            android:title="@string/cart" />

        <item
            android:id="@+id/menuOrders"
            android:title="@string/orders" />

        <item
            android:id="@+id/menuProfile"
            android:title="@string/profile" />
    </group>

    <group android:id="@+id/unLoggedGroup">

        <item
            android:id="@+id/menuLogin"
            android:title="@string/login" />

        <item
            android:id="@+id/menuRegister"
            android:title="@string/register" />
    </group>

    <group android:id="@+id/settingsGroups">

        <item
            android:id="@+id/menuSettings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menuAbout"
            android:title="@string/about_us" />

    </group>

</menu>