<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment">

        <TextView
            android:id="@+id/text_register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/muli"
            android:text="@string/create_account_header"
            android:textColor="@color/primaryTextColor"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_register_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="52dp"
            android:fontFamily="@font/muli"
            android:text="@string/register_bio"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register_header" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_background"
            android:drawableEnd="@drawable/icon_input_profile"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register_bio"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/text_label_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/primaryColor"
            android:fontFamily="@font/muli"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/first_name_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_first_name"
            app:layout_constraintStart_toStartOf="@+id/edit_first_name"
            app:layout_constraintTop_toTopOf="@+id/edit_first_name" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_background"
            android:drawableEnd="@drawable/icon_input_profile"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_first_name" />

        <TextView
            android:id="@+id/text_label_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/primaryColor"
            android:fontFamily="@font/muli"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/last_name_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_last_name"
            app:layout_constraintStart_toStartOf="@+id/edit_last_name"
            app:layout_constraintTop_toTopOf="@+id/edit_last_name" />

        <EditText
            android:id="@+id/edit_email_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_background"
            android:drawableEnd="@drawable/icon_input_email"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_last_name" />

        <EditText
            android:id="@+id/edit_password_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_background"
            android:drawableEnd="@drawable/icon_input_password"
            android:ems="10"
            android:fontFamily="@font/muli"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email_register" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/muli"
            android:text="Register"
            android:textColor="@color/primaryTextColor"
            app:icon="@drawable/ic_person_add"
            app:iconTint="@color/secondaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_register" />

        <TextView
            android:id="@+id/text_label_email_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/primaryColor"
            android:fontFamily="@font/muli"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/email_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_email_register"
            app:layout_constraintStart_toStartOf="@+id/edit_email_register"
            app:layout_constraintTop_toTopOf="@+id/edit_email_register" />

        <TextView
            android:id="@+id/text_label_password_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/primaryColor"
            android:fontFamily="@font/muli"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/password_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_password_register"
            app:layout_constraintStart_toStartOf="@+id/edit_password_register"
            app:layout_constraintTop_toTopOf="@+id/edit_password_register" />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/muli"
            android:text="@string/sign_in_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_sign_in_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/muli"
            android:text="@string/sign_in_action_text"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>
