<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_card_view_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="@dimen/cardview_custom_radius"
    android:background="@drawable/input_background"
    app:cardBackgroundColor="@color/primaryColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_row_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_product_image_cart"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/content_desc_product"
            android:padding="5dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_product_name_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/muli"
            android:text="@string/product_name_placeholder_text"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_product_image_cart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_product_price_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/muli"
            android:text="@string/price_placeholder_text"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintStart_toStartOf="@+id/text_product_name_cart"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name_cart" />

        <ImageButton
            android:id="@+id/button_remove_from_cart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/content_desc_cart_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name_cart"
            app:srcCompat="@drawable/ic_cart2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>