<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_cart_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_cart"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="150dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/button_to_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_cart_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/muli"
        android:text="@string/quantity_text"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_cart_total"
        app:layout_constraintStart_toStartOf="@+id/button_to_checkout" />

    <TextView
        android:id="@+id/text_cart_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/muli"
        android:text="@string/cart_total"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_to_checkout"
        app:layout_constraintStart_toStartOf="@+id/button_to_checkout" />

    <TextView
        android:id="@+id/text_cart_quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/muli"
        android:text="@string/default_cart_quantity_value"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_cart_total_value"
        app:layout_constraintTop_toBottomOf="@id/divider_cart" />

    <TextView
        android:id="@+id/text_cart_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/muli"
        android:textColor="@color/secondaryDarkColor"
        android:text="@string/default_cart_total_value"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button_to_checkout"
        app:layout_constraintTop_toBottomOf="@+id/text_cart_quantity_value" />

    <Button
        android:id="@+id/button_to_checkout"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_button_background"
        android:backgroundTint="@color/secondaryColor"
        android:drawableEnd="@drawable/ic_orders_menu"
        android:fontFamily="@font/muli"
        android:text="@string/checkout_button"
        android:textSize="18sp"
        app:iconTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFB300" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
