<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:hapticFeedbackEnabled="true"
    app:cardBackgroundColor="@color/primaryColor"
    app:cardCornerRadius="@dimen/cardview_custom_radius"
    app:cardElevation="@dimen/custom_card_elevation"
    app:cardMaxElevation="@dimen/custom_card_elevation"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:contentPaddingBottom="6dp"
    app:contentPaddingLeft="3dp"
    app:contentPaddingRight="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_row_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background">

        <ImageView
            android:id="@+id/image_product_image"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/content_desc_cart_delete"
            android:cropToPadding="false"
            android:padding="5dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.50"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/muli"
            android:text="@string/product_name_placeholder_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_product_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_free_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/free_delivery_text"
            android:textColor="#403F3E"
            android:textSize="10sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/text_product_price_cart"
            app:layout_constraintTop_toBottomOf="@+id/text_product_price_cart" />

        <TextView
            android:id="@+id/text_product_price_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/muli"
            android:text="@string/price_desc"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintStart_toStartOf="@+id/text_product_name"
            app:layout_constraintTop_toBottomOf="@+id/text_brand" />

        <TextView
            android:id="@+id/text_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/brand_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/text_product_name"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name" />

        <TextView
            android:id="@+id/text_brand_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/muli"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_brand"
            app:layout_constraintStart_toEndOf="@+id/text_brand" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>